(dark mode) fixed remaining colours

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -32,11 +32,13 @@
   --color-stroke: #{get-color('slate')};
   --color-theme-primary: #{lighten(get-color('primary'), 50%)};
   --color-theme-primary-glare: #{lighten(get-color('primary-glare'), 50%)};
-  --color-action-bg: var(--color-theme-primary-glare);
+  --color-action-bg: #{get-color('mid')};
   --color-action-text: #{get-color('dark')};
   --color-theme-highlight: #{get-color('highlight')};
   --color-theme-highlight-block: #{get-color('slate')};
-  --color-theme-feature-text: #{get-color('highlight')};
+  --color-theme-feature-text: #{get-color('light')};
+  --color-bg-mid: #{get-color('slate')};
+  --color-bg-dark: #{get-color('dark')};
 }
 
 body {
