--- a/src/scss/components/_site-foot.scss
+++ b/src/scss/components/_site-foot.scss
@@ -39,6 +39,7 @@
 
   .instagram-link {
     margin-left: 0.675rem;
+    fill: currentColor;
   }
 
   @media (max-width:47.99rem) {
